@@ -1,6 +1,7 @@
 2006-03-19 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
 	* Fix bugtracker issue 2924.
 	* Fix bugtracker issue 2925.
+	* Make direct_mail conflict with plugin_mgm
 
 2006-03-16 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
 	* Fix bugtracker issue 2821.
